--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>EvTTC</title>
 </head>
 <body>
-    <h1>Image Display</h1>
-    <img src="./img/eye_catcher3.png" alt="Displayed Image" style="max-width:100%;">
+    <h1>EvTTC</h1>
+    <img src="./img/eye_catcher3.png" alt="eye_catcher3" style="max-width:100%;">
 </body>
 </html>
