--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <div class="clearfix">
             <p><br></p>
 
-<p><img src="assets/img/eye_catcher3.png" alt="sensor" style="max-width:98%;"></p>
+<p><img src="/EvTTC/assets/img/real_scene.png" alt="sensor" style="max-width:98%;"></p>
 
 <p><br></p>
 
@@ -276,10 +276,6 @@
             
           </div>
         </article>
-
-</div>
-
-    </div>
 
     <!-- Footer -->    
     <footer class="fixed-bottom">
