--- a/about/sensor/index.html
+++ b/about/sensor/index.html
@@ -117,8 +117,12 @@
                 <li class="nav-item ">
                   <a class="nav-link" href="/EvTTC/calibration/">Calibration</a>
                 </li>
-                <li class="nav-item ">
-                  <a class="nav-link" href="/EvTTC/download/">Download</a>
+                <li class="nav-item dropdown ">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Download</a>
+                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                  <a class="nav-link" href="/EvTTC/download/download/">Download</a>
+                  <a class="nav-link" href="/EvTTC/download/data_format/">Data Format</a>
+                </div>
                 </li>
                 <li class="nav-item ">
                   <a class="nav-link" href="/EvTTC/competition/">Competition</a>
@@ -152,13 +156,13 @@
     <div class="col-sm mt-3 mt-md-0">
         <figure>
 
-  <picture>
-    <!-- Fallback to the original file -->
-    <div style="text-align: center;">
-      <p><img src="/EvTTC/assets/img/eye_catcher3.png" alt="sensor" style="max-width:98%;"></p>
+      <picture>
+        <!-- Fallback to the original file -->
+        <div style="text-align: center;">
+          <p><img src="/EvTTC/assets/img/eye_catcher3.png" alt="sensor" style="max-width:98%;"></p>
+        </div>
+      </picture>
     </div>
-  </picture>
-</div>
 </div>
 <div class="caption" style="text-align: justify; width: 100%; margin: 0 auto;">
 Fig. 1 Left: An overview of the data collection setup. Right: The top 
@@ -170,7 +174,7 @@ of view and detection distances indicated by circled letters. The bottom row pre
 
 <p><br></p>
 <article>
-<p style="text-align: justify; width: 100%; margin: 0 auto; line-height: 1.6;">
+<p>
   The raw data used for estimating TTC contain RGB images
   and corresponding event streams. The employed event camera is Prophesee
   EVK-v4 (sensor size 1/2.5”) that has a spatial resolution of
