--- a/index.html
+++ b/index.html
@@ -117,8 +117,12 @@
                 <li class="nav-item ">
                   <a class="nav-link" href="/EvTTC/calibration/">Calibration</a>
                 </li>
-                <li class="nav-item ">
-                  <a class="nav-link" href="/EvTTC/download/">Download</a>
+                <li class="nav-item dropdown ">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Download</a>
+                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                  <a class="nav-link" href="/EvTTC/download/download/">Download</a>
+                  <a class="nav-link" href="/EvTTC/download/data_format/">Data Format</a>
+                </div>
                 </li>
                 <li class="nav-item ">
                   <a class="nav-link" href="/EvTTC/competition/">Competition</a>
