The first vertion!

--- a/download/download/index.html
+++ b/download/download/index.html
@@ -171,8 +171,7 @@
 
             <p><br></p>
 
-            <h3>Car-to-Car Rear scenarios</h3>
-
+            <h3><strong>Car-to-Car Rear scenarios</strong></h3>
             <p><br></p>
 
             <div class="row">
@@ -185,31 +184,150 @@
                     </figure>
                 </div>
             </div>
-
-            <h5>board-slow</h5>
-
-            <div class="row">
+            <div class="content-box">
+                <h4><strong>CCRs-1</strong></h4>
+                <br>
                 <div class="col-sm mt-3 mt-md-0">
                     <li>
-                        <strong>left event</strong>:   <a href="https://drive.google.com/file/d/1PctBmd5AXikRuuGplXVvFdandxd8zLXC/view?usp=sharing" target="_blank" rel="noopener noreferrer">rosbag (159M)</a>   |   <a href="https://drive.google.com/file/d/1XA-aSI-vqTC9AKTgyZz7-WzHabiAAjNA/view?usp=sharing" target="_blank" rel="noopener noreferrer">hdf5 (112M)</a>
+                        <strong>CCRs-1-slow-100%</strong>:   
+                        <a href="https://drive.google.com/file/d/1Pb134mzj2r1POhO4CjW9Pt3seKG2Jcfy/view?usp=drive_link" target="_blank" rel="noopener noreferrer">viedo (264.6M)</a>   |  
+                        <a href="https://drive.google.com/file/d/1qwy3YebMzra73A5p0ZYyKn0Kwx8PdDnf/view?usp=drive_link" target="_blank" rel="noopener noreferrer">hdf5 (3.22G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
+                        <a href="https://drive.google.com/file/d/1NDFFpJrKUwOc2SV9TFQZ98vPX3fqNbA2/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (877.4M)</a>
                     </li>
-                </div>
-                <div class="col-sm mt-3 mt-md-0">
                     <li>
-                        <strong>right event</strong>:   <a href="https://drive.google.com/file/d/1EBEFu6afpz_jJwO8gNUYM3FlW7w0IPPE/view?usp=sharing" target="_blank" rel="noopener noreferrer">rosbag (177M)</a>   |   <a href="https://drive.google.com/file/d/1qQzzn1D7HVPoV6W3WHYhHs1Yvh1y0D7y/view?usp=sharing" target="_blank" rel="noopener noreferrer">hdf5 (124M)</a>
+                        <strong>CCRs-1-medium-100%</strong>:   
+                        <a href="https://drive.google.com/file/d/1tavvcDGfxPX-_3rgHt3UXm1N35NnwwEZ/view?usp=drive_link" target="_blank" rel="noopener noreferrer">viedo (242.9M)</a>   |  
+                        <a href="https://drive.google.com/file/d/1rtezshZo69MPR4YrsnSgO6XtxJb6iPJW/view?usp=drive_link" target="_blank" rel="noopener noreferrer">hdf5 (3.59G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
+                        <a href="https://drive.google.com/file/d/1c4pj_gce60AOQz1wrIsWklL5lLEM4Mhe/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (936.6M)</a>
+                    </li>
+                    <li>
+                        <strong>CCRs-1-high-100%</strong>:   
+                        <a href="https://drive.google.com/file/d/1Pb134mzj2r1POhO4CjW9Pt3seKG2Jcfy/view?usp=drive_link" target="_blank" rel="noopener noreferrer">viedo (264.6M)</a>   |  
+                        <a href="https://drive.google.com/file/d/1qwy3YebMzra73A5p0ZYyKn0Kwx8PdDnf/view?usp=drive_link" target="_blank" rel="noopener noreferrer">hdf5 (3.22G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
+                        <a href="https://drive.google.com/file/d/1NDFFpJrKUwOc2SV9TFQZ98vPX3fqNbA2/view?usp=drive_link" target="_blank" rel="noopener noreferrer">raw bag (877.4M)</a>
+                    </li>
+                    <br>
+
+                    <li>
+                        <strong>CCRs-1-slow-50%</strong>:   
+                        <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
+                        <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">raw bag (M)</a>
+                    </li>
+                    <li>
+                        <strong>CCRs-1-medium-50%</strong>:   
+                        <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
+                        <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">raw bag (M)</a>
+                    </li>
+                    <li>
+                        <strong>CCRs-1-high-50%</strong>:   
+                        <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
+                        <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">raw bag (M)</a>
+                    </li>
+                    <br>
+                    <li>
+                        <strong>CCRs-1-slow-0%</strong>:   
+                        <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
+                        <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">raw bag (M)</a>
+                    </li>
+                    <li>
+                        <strong>CCRs-1-medium-0%</strong>:   
+                        <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
+                        <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">raw bag (M)</a>
+                    </li>
+                    <li>
+                        <strong>CCRs-1-high-0%</strong>:   
+                        <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
+                        <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">raw bag (M)</a>
                     </li>
                 </div>
             </div>
-            <div class="row">
 
+
+            <p><br></p>
+            <div class="row">
                 <div class="col-sm mt-3 mt-md-0">
+                    <figure>
+                        <picture>
+                            <!-- Fallback to the original file -->
+                            <img class="img-fluid rounded z-depth-1" src="/EvTTC/assets/gif/CCRs-1.gif" title="CCRs-1">
+                        </picture>
+                    </figure>
+                </div>
+            </div>
+            <div class="content-box">
+                <h4><strong>CCRs-2</strong></h4>
+                <br>
+                <div class="col-sm mt-3 mt-md-0">
+
                     <li>
-                        <strong>left camera</strong>:   <a href="https://drive.google.com/file/d/1-a68DrZjPZXARujfn2OKfrbziBaTSi1_/view?usp=sharing" target="_blank" rel="noopener noreferrer">rosbag (420M)</a>   |   <a href="https://drive.google.com/file/d/1HBsDz7RrQFTGSHluQNsCjGlJHrhxoqXk/view?usp=sharing" target="_blank" rel="noopener noreferrer">zip (435M)</a>
+                        <strong>CCRs-1-slow-100%</strong>:   
+                        <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
+                        <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">raw bag (M)</a>
+                    </li>
+                    <li>
+                        <strong>CCRs-1-medium-100%</strong>:   
+                        <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
+                        <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">raw bag (M)</a>
+                    </li>
+                    <li>
+                        <strong>CCRs-1-high-100%</strong>:   
+                        <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
+                        <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">raw bag (M)</a>
                     </li>
                 </div>
+            </div>
+
+
+            <p><br></p>
+            <div class="row">
                 <div class="col-sm mt-3 mt-md-0">
+                    <figure>
+                        <picture>
+                            <!-- Fallback to the original file -->
+                            <img class="img-fluid rounded z-depth-1" src="/EvTTC/assets/gif/CCRs-1.gif" title="CCRs-1">
+                        </picture>
+                    </figure>
+                </div>
+            </div>
+            <div class="content-box">
+                <h4><strong>CCRs-3</strong></h4>
+                <br>
+                <div class="col-sm mt-3 mt-md-0">
+
                     <li>
-                        <strong>right camera</strong>:   <a href="https://drive.google.com/file/d/1C9ntDitksJ_bJs1lKm3raQP6oPmlGYwD/view?usp=sharing" target="_blank" rel="noopener noreferrer">rosbag (410M)</a>   |   <a href="https://drive.google.com/file/d/12wc-NWZy3Cang5dRKFGSHvJOCZURjl_y/view?usp=sharing" target="_blank" rel="noopener noreferrer">zip (425M)</a>
+                        <strong>CCRs-1-low-100%</strong>:   
+                        <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
+                        <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">raw bag (M)</a>
+                    </li>
+                    <li>
+                        <strong>CCRs-1-medium-100%</strong>:   
+                        <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
+                        <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">raw bag (M)</a>
                     </li>
                 </div>
             </div>
