The first vertion!

--- a/download/download/index.html
+++ b/download/download/index.html
@@ -264,7 +264,7 @@
                     <figure>
                         <picture>
                             <!-- Fallback to the original file -->
-                            <img class="img-fluid rounded z-depth-1" src="/EvTTC/assets/gif/CCRs-1.gif" title="CCRs-1">
+                            <img class="img-fluid rounded z-depth-1" src="/EvTTC/assets/gif/CCRs-2.gif" title="CCRs-2">
                         </picture>
                     </figure>
                 </div>
@@ -275,21 +275,21 @@
                 <div class="col-sm mt-3 mt-md-0">
 
                     <li>
-                        <strong>CCRs-1-slow-100%</strong>:   
+                        <strong>CCRs-2-slow-100%</strong>:   
                         <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
                         <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
                         <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
                         <a href="" target="_blank" rel="noopener noreferrer">raw bag (M)</a>
                     </li>
                     <li>
-                        <strong>CCRs-1-medium-100%</strong>:   
+                        <strong>CCRs-2-medium-100%</strong>:   
                         <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
                         <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
                         <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
                         <a href="" target="_blank" rel="noopener noreferrer">raw bag (M)</a>
                     </li>
                     <li>
-                        <strong>CCRs-1-high-100%</strong>:   
+                        <strong>CCRs-2-high-100%</strong>:   
                         <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
                         <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
                         <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
@@ -305,7 +305,7 @@
                     <figure>
                         <picture>
                             <!-- Fallback to the original file -->
-                            <img class="img-fluid rounded z-depth-1" src="/EvTTC/assets/gif/CCRs-1.gif" title="CCRs-1">
+                            <img class="img-fluid rounded z-depth-1" src="/EvTTC/assets/gif/CCRs-3.gif" title="CCRs-3">
                         </picture>
                     </figure>
                 </div>
@@ -316,14 +316,14 @@
                 <div class="col-sm mt-3 mt-md-0">
 
                     <li>
-                        <strong>CCRs-1-low-100%</strong>:   
+                        <strong>CCRs-3-low-100%</strong>:   
                         <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
                         <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
                         <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
                         <a href="" target="_blank" rel="noopener noreferrer">raw bag (M)</a>
                     </li>
                     <li>
-                        <strong>CCRs-1-medium-100%</strong>:   
+                        <strong>CCRs-3-medium-100%</strong>:   
                         <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
                         <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
                         <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
@@ -331,6 +331,98 @@
                     </li>
                 </div>
             </div>
+
+
+            <p><br></p>
+            <div class="row">
+                <div class="col-sm mt-3 mt-md-0">
+                    <figure>
+                        <picture>
+                            <!-- Fallback to the original file -->
+                            <img class="img-fluid rounded z-depth-1" src="/EvTTC/assets/gif/CCRs-side.gif" title="CCRs-side">
+                        </picture>
+                    </figure>
+                </div>
+            </div>
+            <div class="content-box">
+                <h4><strong>CCRs-side</strong></h4>
+                <br>
+                <div class="col-sm mt-3 mt-md-0">
+
+                    <li>
+                        <strong>CCRs-side-low</strong>:   
+                        <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
+                        <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">raw bag (M)</a>
+                    </li>
+                    <li>
+                        <strong>CCRs-side-medium</strong>:   
+                        <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
+                        <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">raw bag (M)</a>
+                    </li>
+                    <li>
+                        <strong>CCRs-side-high</strong>:   
+                        <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
+                        <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">raw bag (M)</a>
+                    </li>
+                </div>
+            </div>
+
+
+            <p><br></p>
+            <div class="row">
+                <div class="col-sm mt-3 mt-md-0">
+                    <figure>
+                        <picture>
+                            <!-- Fallback to the original file -->
+                            <img class="img-fluid rounded z-depth-1" src="/EvTTC/assets/gif/CCRm.gif" title="CCRm">
+                        </picture>
+                    </figure>
+                </div>
+            </div>
+            <div class="content-box">
+                <h4><strong>CCRm</strong></h4>
+                <br>
+                <div class="col-sm mt-3 mt-md-0">
+
+                    <li>
+                        <strong>CCRm-low-100%</strong>:   
+                        <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
+                        <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">raw bag (M)</a>
+                    </li>
+                    <li>
+                        <strong>CCRm-medium-100%</strong>:   
+                        <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
+                        <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">raw bag (M)</a>
+                    </li>
+                    <br>
+                    <li>
+                        <strong>CCRm-low-50%</strong>:   
+                        <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
+                        <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">raw bag (M)</a>
+                    </li>
+                    <li>
+                        <strong>CCRm-medium-50%</strong>:   
+                        <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
+                        <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">raw bag (M)</a>
+                    </li>
+
+                </div>
+            </div>
+
         </article>
     </div>
 
