The first vertion!

--- a/download/download/index.html
+++ b/download/download/index.html
@@ -305,7 +305,7 @@
                     <figure>
                         <picture>
                             <!-- Fallback to the original file -->
-                            <img class="img-fluid rounded z-depth-1" src="/EvTTC/assets/gif/CCRs-3.gif" title="CCRs-3">
+                            <img class="img-fluid rounded z-depth-1" src="/EvTTC/assets/gif/CCRs-3-V1.gif" title="CCRs-3">
                         </picture>
                     </figure>
                 </div>
@@ -414,6 +414,21 @@
                     </li>
                     <li>
                         <strong>CCRm-medium-50%</strong>:   
+                        <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
+                        <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">raw bag (M)</a>
+                    </li>
+                    <br>
+                    <li>
+                        <strong>CCRm-low-0%</strong>:   
+                        <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
+                        <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">raw bag (M)</a>
+                    </li>
+                    <li>
+                        <strong>CCRm-medium-0%</strong>:   
                         <a href="" target="_blank" rel="noopener noreferrer">viedo (M)</a>   |  
                         <a href="" target="_blank" rel="noopener noreferrer">hdf5 (G)</a>   |   
                         <a href="" target="_blank" rel="noopener noreferrer">gt-ttc (G)</a>   |   
