--- a/competition/index.html
+++ b/competition/index.html
@@ -52,6 +52,10 @@
       }
     </script>
 
+    <script type="text/javascript" async
+      src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
+    </script>
+
 
     <!-- Bootstrap & MDB -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-DF7Zhf293AJxJNTmh5zhoYYIMs2oXitRfBjY+9L//AY=" crossorigin="anonymous">
@@ -152,7 +156,43 @@
     <article>
       <p><br></p>
 
-      
+      <table class="styled-table">
+        <thead>
+          <tr class="heading">
+            <td class="results" style="width: 15%;">Method</td>
+            <td class="results" style="width: 15%;">Sequences</td>
+            <td class="results" style="width: 10%;">Setting</td>
+            <td class="results" style="width: 8%;">Code</td>
+            <td class="results" style="width: 15%;">\( e_{TTC}\) (%)</td>
+            <td class="results" style="width: 15%;">Runtime (s)</td>
+            <td class="results" style="width: 15%;">Environment</td>
+            <!-- <td class="results"><input type="submit" value="Compare" name="compare"></td> -->
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="results">STRTTC</td>
+            <td class="results">CCRs1-slow</td>
+            <td class="results"></td>
+            <td class="results"></td>
+            <td class="results">97.36 %</td>
+            <td class="results">0.01 s</td>
+            <td class="results">1 core @ 2.5 Ghz (C/C++)</td>
+            <!-- <td class="results"><input type="checkbox" value="b8c1da41032081ec9a33be4e4a24993b5268f9dc" name="selected[]"></td> -->
+          </tr>
+
+          <tr>
+            <td class="results_sub" colspan="7">
+              J. Li, B. Liao, X. LU, P. Liu, S. Shen, and Y. Zhou,: 
+              <a href="http://scholar.google.de/scholar?q=Depth%20Matters%3A%20Exploring%20Deep%20Interactions%20of%20RGB-D%20for%20Semantic%20Segmentation%20in%20Traffic%20Scenes">
+                “Event-aided
+time-to-collision estimation for autonomous driving,” 
+              </a>. 2024.
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
     </article>
 
   </div>
