--- a/about/sensor/index.html
+++ b/about/sensor/index.html
@@ -131,6 +131,7 @@
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contact Us</a>
                   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="https://github.com/NAIL-HNU/evttc_dataset/issues" target="_blank" rel="noopener noreferrer">Dataset Issue</a>
+                    <a class="dropdown-item" href="/EvTTC/submit/">Submit Results</a>
                   </div>
                 </li>
             </ul>
@@ -154,8 +155,6 @@
 
 <div class="row">
     <div class="col-sm mt-3 mt-md-0">
-        <figure>
-
       <picture>
         <!-- Fallback to the original file -->
         <div style="text-align: center;">
