--- a/about/ground_truth/index.html
+++ b/about/ground_truth/index.html
@@ -86,7 +86,7 @@
       <!-- Nav Bar -->
       <nav id="navbar" class="navbar navbar-light navbar-expand-sm fixed-top">
         <div class="container">
-          <a class="navbar-brand title font-weight-lighter" href="http://localhost:4000/EvTTC/"><span class="font-weight-bold">EvTTC Benchmark</span>   </a>
+          <a class="navbar-brand title font-weight-lighter" href="http://localhost:5500/EvTTC/"><span class="font-weight-bold">EvTTC Benchmark</span>   </a>
           <!-- Navbar Toggle -->
           <button class="navbar-toggler collapsed ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="sr-only">Toggle navigation</span>
@@ -131,6 +131,7 @@
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contact Us</a>
                   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="https://github.com/NAIL-HNU/evttc_dataset/issues" target="_blank" rel="noopener noreferrer">Dataset Issue</a>
+                    <a class="dropdown-item" href="/EvTTC/submit/">Submit Results</a>
                   </div>
                 </li>
             </ul>
